--- a/modulo10/template-materialui/src/App.css
+++ b/modulo10/template-materialui/src/App.css
@@ -20,12 +20,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(12px + 2vmin);
+  color: rgba(94, 94, 94, 0.979);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #7b21f0;
 }
 
 @keyframes App-logo-spin {
